# vectorDB

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  master_config  proxy_config  readme.md  vectordb_config
notes/: build.md  chapter4.md
src/: CMakeLists.txt
src/cluster/: CMakeLists.txt  in_memory_log_store.cpp  log_state_machine.cpp  raft_logger.cpp  raft_stuff.cpp
src/common/: CMakeLists.txt  master_cfg.cpp  proxy_cfg.cpp  vector_cfg.cpp  vector_init.cpp
src/database/: CMakeLists.txt  persistence.cpp  scalar_storage.cpp  vector_database.cpp
src/httpserver/: CMakeLists.txt  admin_service_impl.cpp  base_service_impl.cpp  http_server.cpp  master_server.cpp  master_service_impl.cpp  proxy_server.cpp  proxy_service_impl.cpp  user_service_impl.cpp
src/include/cluster/: in_memory_log_store.h  in_memory_state_mgr.h  log_state_machine.h  raft_logger.h  raft_logger_wrapper.h  raft_stuff.h
src/include/common/: backtrace.h  constants.h  master_cfg.h  proxy_cfg.h  vector_cfg.h  vector_init.h  vector_utils.h
src/include/database/: persistence.h  scalar_storage.h  vector_database.h
src/include/httpserver/: admin_service_impl.h  base_service_impl.h  http_server.h  master_server.h  master_service_impl.h  proxy_server.h  proxy_service_impl.h  user_service_impl.h
src/include/index/: faiss_index.h  filter_index.h  hnswlib_index.h  index_factory.h
src/include/logger/: logger.h
src/index/: CMakeLists.txt  faiss_index.cpp  filter_index.cpp  hnswlib_index.cpp  index_factory.cpp
src/logger/: logger.cpp
test/: CMakeLists.txt  test.sh
test/cfg/: cfg_test.cpp
test/database/: database_test.cpp  scalar_storage_test.cpp
test/etcd/: etcd_test.cpp
test/index/: faiss_index_test.cpp  filter_index_test.cpp  hnsw_index_test.cpp
test/test/: gtest_test.cpp
tools/: CMakeLists.txt
tools/server/: CMakeLists.txt  vdb_server.cpp  vdb_server_master.cpp  vdb_server_proxy.cpp
